bug fixes on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-bottom: 10px;
   align-items: center;
   width: 50vw;
   height: 30vh;
@@ -130,19 +131,18 @@
   z-index: 2;
 
   h2 {
-    position: absolute;
-    top: 5%;
+    // position: absolute;
+    // top: 5%;
   }
 
   p {
-    margin-left: 50px;
-    position: absolute;
-    bottom: 30%;
+    margin-left: 30px;
   }
 
   @media (max-width: 800px) {
     width: 100vw;
     background-size: 100vw;
+    height: fit-content;
   }
 
   .definitionList {
